# gym-kmanip

./: .gitignore  =0.29.1  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
gym_kmanip/: __init__.py  env.py  env_base.py  env_real.py  env_sim.py  ik_mujoco.py  log_base.py  log_h5py.py  log_rerun.py  rr_blueprint.py
gym_kmanip/assets/: _env_dual_arm.xml  _env_full_body.xml  _env_solo_arm.xml  _env_torso.xml  arm_l.xml  arm_l_body.xml  arm_r.xml  arm_r_body.xml  scene.xml  torso.xml  torso_body.xml
gym_kmanip/assets/templates/: template_arm.xml  template_arm_body.xml  template_torso.xml  template_torso_body.xml
gym_kmanip/examples/: 0_test_ik.py  0_viewer.py  1_control.py  1_view_env.py  2_log_with_h5py.py  2_log_with_rerun.py  2_logging_with_rerun.py  2_record_env.py  2_synthetic_data.py  3_record_to_mp4.py  3_save_to_video.py  3_teleop_to_dataset.py  4_record_data_teleop.py  4_teleop.py  4_teleop_to_dataset.py  4_train_from_dataset.py  5_upload_dataset_to_hf.py  6_train_from_dataset.py  7_eval_policy.py  Dockerfile.train
tests/: test_env.py
