[metadata]
name = gym-kmanip
version = 0.0.1
description = K-Scale Manipulation Gymnasium Environment
author = Hugo Ponte
author_email = hugo@kscale.dev
license = MIT
url = https://github.com/kscale/gym-kmanip
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = gym_kmanip
install_requires =
    mujoco>=2.3.7
    gymnasium>=0.29.1
    dm-control>=1.0.14
    h5py>=3.11.0
    rerun-sdk>=0.16.0
    imageio[ffmpeg]>=2.34.0
    pytest>=8.1.0